--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
 - '8'
 - 'node'
-before_install: 
+before_script: 
   - truffle exec scripts/deployERC820.js
 deploy:
   provider: npm
